syntax = "proto3";

option go_package = "github.com/cuit9622/dms/common/proto";

package helloworld;

service Greeter {
  rpc SayHello(IdRequest) returns (HelloReply) {}
}

message IdRequest { int64 id = 1; }

message HelloReply {
  string name = 1;
  int32 age = 2;
}